[UI Inspector] IJPL-211726 Clean up InspectorWindow
Fix warnings and use JComponent
where possible.

GitOrigin-RevId: 2303f80c98f522166921a72fb487012b537041ec